added placeholder text to game view

--- a/views/ChapterThree.pug
+++ b/views/ChapterThree.pug
@@ -11,16 +11,9 @@ html
         li= `FS:${characterData.fight}`
         li= `AV:${characterData.armor}`
       p.gameText
-        | You wake in a fugue of pain and disorientation. The last thing you remember was being charged by an warg rider.
-        |You attempt to get up, but a sharp pain in your shoulder prevents your from doing so. You clench your mouth in fear
-        |of making too much noise. The orcs most likley think you perished in the ambush, and you don’t want to give them
-        |any reason to believe otherwise. You again attempt to stand, this time not using your injured arm to prop yourself up.
-        |After a few moments of standing the fugue passes and your sight clears. You wish it hadn’t. Many dead lay before you,
-        |both dunedain and orc. Though the corpses of the orcs vastly outnumber that of the dunedain, you count five clothed in
-        |the garments of your brothers. At first the desire for retribution takes hold and you reach for your sword, though
-        |your hand grasps at thin air. Immediately, hopelessness sets in and you fall to your knees. As you begin to calm down,
-        |you realize what it is you must do. You must return to Annuminas with the knowledge of what took place here. Your
-        |people must know that the three eldest sons of Isildur have perished. You grab a sword, bow, and arrows off the
-        |body of one of your fallen brethren and quetly sneak away from the clearing.
+        | You are exhausted by your battle with the Pursuer, but you know you must press on. You make your way out of the
+        |room and to your chagrin, you see more stairs. You climb and climb until finally you see the exit. With a new found
+        |energy, you sprint toward the end of the tunnel. As you emerge, you feel a cold wind. To your amazement, you are
+        |standing on the outskirts of city.
     div.hrefText
       a(href="/chapterThreeA") Continue..
