--- a/views/ChapterThreeA.pug
+++ b/views/ChapterThreeA.pug
@@ -11,13 +11,9 @@ html
         li= `FS:${characterData.fight}`
         li= `AV:${characterData.armor}`
       p.gameText
-        | You decide to your only hope is to head north toward the old ford and the high pass. From there you will be able
-        |to more easily reach Rivendell, and deliver the grave news to Isildur’s youngest son, Valandil. As you sit silently
-        |planning, hidden in a patch of tall grass and bushes, you hear a noise that makes your heart sink. Two harsh voices
-        |speaking in a dark tongue peirce the silence of the night. To your relief, they are not born by fell wargs. You
-        |realise that they are making their way toward your hiding space and you decide to act. You nock an arrow, aim, and
-        |the loose it on one of the orcs. Your arrow hits its mark, and the orc falls lifeless onto the ground. Before you
-        |can nock a second arrow, you hear a shriek. As you look up at your target, you see a dagger swiftly flying toward you.
-        |You jump out of the way, barely dodging the dagger. Just as you get your bearings, you notice the orc charging you.
+        | Looking upon the dark but beautiful cityscape, you finally allow yourself to feel hope. Only a few minutes walk
+        |and you will have made it to safety--to civilization. Unfortunately for you, this is a text adventure, so obviously
+        |there is going to be a final conflict. That is when you hear it. A low rumbling coming from the tunnel. Out from
+        |the darkness appears a giant, horrid creature!
   div.hrefText
     a(href="/chapterThreeBattle") Engage!
