--- a/views/ChapterTwoA.pug
+++ b/views/ChapterTwoA.pug
@@ -11,13 +11,17 @@ html
         li= `FS:${characterData.fight}`
         li= `AV:${characterData.armor}`
       p.gameText
-        | You decide to your only hope is to head north toward the old ford and the high pass. From there you will be able
-        |to more easily reach Rivendell, and deliver the grave news to Isildur’s youngest son, Valandil. As you sit silently
-        |planning, hidden in a patch of tall grass and bushes, you hear a noise that makes your heart sink. Two harsh voices
-        |speaking in a dark tongue peirce the silence of the night. To your relief, they are not born by fell wargs. You
-        |realise that they are making their way toward your hiding space and you decide to act. You nock an arrow, aim, and
-        |the loose it on one of the orcs. Your arrow hits its mark, and the orc falls lifeless onto the ground. Before you
-        |can nock a second arrow, you hear a shriek. As you look up at your target, you see a dagger swiftly flying toward you.
-        |You jump out of the way, barely dodging the dagger. Just as you get your bearings, you notice the orc charging you.
+        | The stairs lead you deeper and deeper into the earth. It is pitch black and you are only able to move forward
+        |by carefully feeling for the next step with your foot. After finding it you lightly place your foot onto the step,
+        |but to your dismay the rock is wet and you slip. You fall for what feels like an eternity, until your head finds
+        |rock and you are knocked unconscious.
+        | You wake to the sound of growling. In a panic, you jump to your feet and unsheathe your sword. What you see makes
+        |your heart sink. Surrounding you are many skeletal creatures that resemble wolves. One draws closer to you, and
+        |you swing your sword, frantically trying to scare it away. You look around, trying to find some way out of this.
+        |You notice that to your left is a passage, and you decide to make a break for it. As soon as you make your move, you
+        |hear the creatures start to chase you. While running, you notice a path off to the side that has an ascending stairway.
+        |Thinking this is your only way back to the surface, you begin running up the stairs. As you climb further up the stairs
+        |you start to see the faint glow of light in the distance. Finally, the stairs end and you enter a room. Panting, you
+        |turn to see if your pursuers are gaining on you--but all you see is a fog gate.
   div.hrefText
     a(href="/chapterTwoBattle") Engage!
