--- a/views/ChapterTwo.pug
+++ b/views/ChapterTwo.pug
@@ -11,16 +11,11 @@ html
         li= `FS:${characterData.fight}`
         li= `AV:${characterData.armor}`
       p.gameText
-        | You wake in a fugue of pain and disorientation. The last thing you remember was being charged by an warg rider.
-        |You attempt to get up, but a sharp pain in your shoulder prevents your from doing so. You clench your mouth in fear
-        |of making too much noise. The orcs most likley think you perished in the ambush, and you don’t want to give them
-        |any reason to believe otherwise. You again attempt to stand, this time not using your injured arm to prop yourself up.
-        |After a few moments of standing the fugue passes and your sight clears. You wish it hadn’t. Many dead lay before you,
-        |both dunedain and orc. Though the corpses of the orcs vastly outnumber that of the dunedain, you count five clothed in
-        |the garments of your brothers. At first the desire for retribution takes hold and you reach for your sword, though
-        |your hand grasps at thin air. Immediately, hopelessness sets in and you fall to your knees. As you begin to calm down,
-        |you realize what it is you must do. You must return to Annuminas with the knowledge of what took place here. Your
-        |people must know that the three eldest sons of Isildur have perished. You grab a sword, bow, and arrows off the
-        |body of one of your fallen brethren and quetly sneak away from the clearing.
+        | After slaying the serpent creature the fog gate lifts from behind you. For a moment, you consider
+        |heading back into the cemetery. At least there your greatest threat was running into a witless hollow.
+        |Despite your reservations for what might lay ahead, you decide to push forward. You notice a doorway at the
+        |other end of the arena and begin heading toward it. You look through the doorway and see a stairway, though it
+        |is too dark to see where it leads. Seeing no other way to press on, you begin to make your way down into
+        |the darkness.
     div.hrefText
       a(href="/chapterTwoA") Continue..
